Crash when setting mesh line vertices to 0 #112500

Closed
opened 2023-09-18 09:44:07 +02:00 by Mingwei Lim · 3 comments

System Information
Operating system: macOS-12.6.9-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-18 06:06, hash: 906a5a89c41e
Worked: (newest version of Blender that worked as expected)

Short description of error
Setting the count field in the Mesh Line node to 0 causes Blender to crash immediately.

Exact steps for others to reproduce the error

  1. With Blender in factory settings, add the following geometry nodes setup to the default cube:
    screen
  2. Set count field on the Mesh Line node to 0
**System Information** Operating system: macOS-12.6.9-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-18 06:06, hash: `906a5a89c41e` Worked: (newest version of Blender that worked as expected) **Short description of error** Setting the count field in the Mesh Line node to 0 causes Blender to crash immediately. **Exact steps for others to reproduce the error** 1. With Blender in factory settings, add the following geometry nodes setup to the default cube: ![screen](/attachments/416c3d57-1b76-4291-875f-1a2f376f1d2d) 2. Set count field on the Mesh Line node to 0
Mingwei Lim added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-09-18 09:44:08 +02:00
Member

Hi, thanks for the report. Can confirm the regression.

Hi, thanks for the report. Can confirm the regression.
Member

First bad commit: 7344c7875a
@HooglyBoogly ^

First bad commit: 7344c7875a85d4e42590baa92047818001d5abe6 @HooglyBoogly ^
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-09-18 13:56:48 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-18 14:53:46 +02:00
Member

Thanks for the report and for dinging the bad commit!

Thanks for the report and for dinging the bad commit!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112500
No description provided.