Fix #112500: Crash setting mesh line vertices to 0

Caused by missing null check in 7344c7875a85d4e42590